# book-better-activities

./: .gitignore  Dockerfile  Makefile  README.md  bookings.json  config.yaml  pyproject.toml  test.crontab
.github/workflows/: docker.yml
src/: booking.py  config.py  exceptions.py  logging.py  main.py  models.py  notifications.py
src/clients/: better_client.py
src/scripts/: book-activity.py  book_activity.py  book_now.py  list_bookings.py  list_slots.py  scheduled_booking.py
