[project]
name = "book-better-activities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.1.0",
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.2.3",
    "httpz>=1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.9.6",
    "typer>=0.15.1",
]
