[project]
name = "book-better-activities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10.0",
    "black>=25.1.0",
    "discord.py>=2.3.2",
    "httpx>=0.28.1",
    "httpx-retries>=0.2.3",
    "httpz>=1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.9.6",
]
